# mlops_group54

./: .gitignore  README.md  cloudbuild.yaml  models.dvc  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: linting.yaml  tests.yaml
.hydra/: config.yaml  hydra.yaml  overrides.yaml
MLOPS/: profile.txt  pyproject.toml
MLOPS/outputs/2026-01-08/12-07-54/.hydra/: hydra.yaml
MLOPS/outputs/2026-01-08/12-11-52/.hydra/: hydra.yaml
MLOPS/outputs/2026-01-08/12-19-39/: trained_model.pt
MLOPS/outputs/2026-01-08/12-19-39/.hydra/: config.yaml  hydra.yaml
configs/: config.yaml
configs/cloudbuild/: cloudbuild.yaml
configs/data/: data.yaml
configs/eval/: eval.yaml
configs/model/: model.yaml
configs/train/: train.yaml
data/: Data.py  processed.dvc
data/Raw_data/: .gitignore  brain-tumor-mri.dvc
data/monitoring/: reference.csv  requests.csv
dockerfiles/: api.dockerfile  eval.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
mlops_group54/: README.md  pyproject.toml  tasks.py
mlops_group54/docs/source/: index.md
mlops_group54/src/mlops_group54_project/: train.py
mlops_group54/tests/: test_data.py
reports/: README.md
src/mlops_group54_project/: api.py  batch_requests.py  data.py  data_drift.py  evaluate.py  model.py  train.py
tests/: test_api.py  test_data.py  test_model.py
tests/integrationtests/: test_apis.py
wandb/offline-run-20260120_095928-k928b0bk/: run-k928b0bk.wandb
wandb/run-20260115_121307-92yd4fru/: run-92yd4fru.wandb
wandb/run-20260115_121654-zq4jfpgg/: run-zq4jfpgg.wandb
wandb/run-20260115_123755-n8jqhvw1/: run-n8jqhvw1.wandb
wandb/run-20260120_155507-j5yf92gm/: run-j5yf92gm.wandb
wandb/run-20260120_161001-nbl4yqo8/: run-nbl4yqo8.wandb
wandb/run-20260120_161058-dmhnnp66/: run-dmhnnp66.wandb
wandb/run-20260120_181552-bn9adwir/: run-bn9adwir.wandb
wandb/run-20260120_195205-clj6trlg/: run-clj6trlg.wandb
(+25 files in other folders)
