[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.3",
    "numpy>=2.4.0",
    "torch>=2.9.1",
    "hydra-core>=1.3.2",
    "torchvision>=0.24.1",
    "matplotlib>=3.10.8",
    "kagglehub>=0.4.0",
]
